tests/errmsgs/t8064.nim
import tables

values


discard """
  errormsg: "expression has no type: values"
"""
